[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scripts/player_scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/hero/hero-attack/hero-attack-4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/hero/hero-run/hero-run-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/hero/hero-crouch/crouch-attack.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/hero/hero-crouch/hero-crouch.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/hero/hero-attack/hero-attack-3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/hero/hero-attack/hero-attack-1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/hero/hero-attack/hero-attack-2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/hero/hero-jump/hero-jump-1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/hero/hero-idle/hero-idle-2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/hero/hero-jump/hero-jump-3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/hero/hero-idle/hero-idle-1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/hero/hero-jump/hero-jump-2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/hero/hero-idle/hero-idle-3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/hero/hero-attack/hero-attack-5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/hero/hero-idle/hero-idle-4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/hero/hero-jump/hero-jump-4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/hero/hero-run/hero-run-2.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/hero/hero-run/hero-run-3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/hero/hero-run/hero-run-5.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/hero/hero-run/hero-run-6.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/hero/hero-run/hero-run-4.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/hero/smokeWhite1.png" type="Texture" id=23]
[ext_resource path="res://Assets/LightTexture.png" type="Texture" id=24]
[ext_resource path="res://Scripts/player_scripts/Damaged_Area.gd" type="Script" id=42]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.0855, 24.2997 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 15 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "crouch"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "crouch_attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 5 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19, 40 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0.0285714, 0.914286 )
colors = PoolColorArray( 0.980469, 0.980469, 0.980469, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.967045 ), -0.697325, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
render_priority = 1
trail_size_modifier = SubResource( 13 )
trail_color_modifier = SubResource( 11 )
emission_shape = 3
emission_point_count = 1
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
flatness = 0.06
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.22
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2

[sub_resource type="Animation" id=15]
resource_name = "down_camera"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 200 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle_camera"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.07297, 32.6898 )
shape = SubResource( 1 )

[node name="AttackPos" type="Position2D" parent="."]
position = Vector2( 60, 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/crouch = SubResource( 3 )
anims/crouch_attack = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/run = SubResource( 7 )
anims/strongcrouch = SubResource( 8 )

[node name="Player_Damaged_Area" type="Area2D" parent="."]
visible = false
script = ExtResource( 42 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Damaged_Area"]
position = Vector2( 4.561, 14.533 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 7, -2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
flip_h = true

[node name="DoubleTap" type="Timer" parent="."]

[node name="RunEffect" type="Particles2D" parent="."]
visible = false
position = Vector2( 51.3136, 51.0547 )
amount = 2
process_material = SubResource( 14 )
texture = ExtResource( 23 )

[node name="RayHook" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="Line2D" type="Line2D" parent="RayHook"]
points = PoolVector2Array( 0, 0 )
default_color = Color( 0.976471, 0.980392, 0.992157, 1 )
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -150 )
current = true

[node name="CameraTimer" type="Timer" parent="Camera2D"]
wait_time = 1.3

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 24 )
color = Color( 0.866667, 0.92549, 0.933333, 1 )
energy = 0.9
range_z_min = -1500
range_z_max = 1500
shadow_enabled = true

[node name="CameraAnim" type="AnimationPlayer" parent="."]
anims/down_camera = SubResource( 15 )
anims/idle_camera = SubResource( 16 )
